[project]
name = "Recipe Buddy"
version = "0.0.1"
authors = [{ name = "MarcDub", email = "m.d.187.phd@proton.cme" }]
description = "Dont know what to cook with what you have available, type in the ingredients and the rest will follow"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
